# OpenAI-gpt-oss-20b

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs  test_api.rs
