[package]
name = "gpt-oss-20b"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "time", "sync", "process"] }

# Enable the `json` feature so RequestBuilder::json exists.
# Use rustls to avoid needing system OpenSSL (optional but generally simpler on Linux).
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wiremock = "0.6.5"